--- a/flaskFile/templates/layout.html
+++ b/flaskFile/templates/layout.html
@@ -32,8 +32,13 @@
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                  <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+                {% else %}
+                  <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                  <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                {% endif %}
               </div>
             </div>
           </div>
@@ -41,7 +46,7 @@
       </header>
       <main role="main" class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md">
             {% with messages = get_flashed_messages(with_categories=true) %}
               {% if messages %}
                 {% for category, message in messages %}
@@ -54,29 +59,13 @@
             {% block content %}
             {% endblock %}
           </div>
-          <div class="col-md-4">
-            <div class="content-section">
-              <h3>Quick View</h3>
-              <p class='text-muted'>
-                <ul class="list-group">
-                  <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Upcoming Ride</li>
-                  <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Cab-Sharing Requests</li>
-                  <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Last Ride</li>
-                  <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Your Raiting</li>
-                </ul>
-              </p>
-            </div>
-          </div>
         </div>
       </main>
-
-
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-      <br><br><br><br>
   </body>
   <footer>
     &copy; Copyright 2021 Co-Ride<br>
