--- a/flaskFile/templates/account.html
+++ b/flaskFile/templates/account.html
@@ -1,17 +1,22 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Hi {{ current_user.username }}</h1>
-    <div class="col-md-4">
-        <div class="content-section">
-          <h3>Quick View</h3>
-          <p class='text-muted'>
-            <ul class="list-group">
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Upcoming Ride</li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Cab-Sharing Requests</li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Last Ride</li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Your Raiting</li>
-            </ul>
-          </p>
-        </div>
+  <div class="content-section">
+    <div class="media">
+      <img class="rounded-circle account-img" title="My Image" src="{{ imageFile }}">
+      <div class="media-body">
+        <h2 class="account-heading">{{ current_user.username }}</h2>
+        <p class="text-secondary">{{ current_user.email }}</p>
       </div>
+    </div>
+  </div>
+  <div class="content-section">
+    <p class='text-muted'>
+      <ul class="list-group">
+        <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Upcoming Ride</li>
+        <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Cab-Sharing Requests</li>
+        <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Last Ride</li>
+        <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Your Raiting</li>
+      </ul>
+    </p>
+  </div>
 {% endblock content%}
