Reset password page and some refactoring
Author: Sidddhartha Purwar
Date: 16-Nov-2021

Files:

modified:   .gitignore
modified:   flaskFile/forms.py
modified:   flaskFile/routes.py
deleted:    flaskFile/site.db
modified:   flaskFile/static/main.css
modified:   flaskFile/templates/account.html
modified:   flaskFile/templates/layout.html

--- a/flaskFile/templates/account.html
+++ b/flaskFile/templates/account.html
@@ -9,14 +9,39 @@
       </div>
     </div>
   </div>
-  <div class="content-section">
-    <p class='text-muted'>
-      <ul class="list-group">
-        <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Upcoming Ride</li>
-        <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Cab-Sharing Requests</li>
-        <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Last Ride</li>
-        <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Your Raiting</li>
-      </ul>
-    </p>
-  </div>
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Update Profile</legend>
+            <div class="form-group">
+                {{ form.username.label(class="form-control-label") }}
+                {% if form.username.errors %}
+                    {{ form.username(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.username.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.username(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.email.label(class="form-control-label") }}
+                {% if form.email.errors %}
+                    {{ form.email(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.email(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+        </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info") }}
+        </div>
+    </form>
 {% endblock content%}
