--- a/flaskFile/templates/result.html
+++ b/flaskFile/templates/result.html
@@ -1,17 +1,23 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h3>Results are</h3><br>
-    {% for post in posts %}
-        <article class="media content-section">
-          <div class="media-body">
-            <div class="article-metadata">
-              {% if post.Verify %}
-                <a><h4 style="color: #2b2b2bd2;">{{ post.Username }} <span class="vertify-text">vertified</h4></a>
-              {% else %}
-                <a><h4 style="color: #2b2b2bd2;">{{ post.Username }}</h4></a>
-              {% endif %}
-              <a><h4 style="color: #2b2b2bd2;">{{ post.Rating }}</h4></a><br>
-              <a href="mailto:{{ post.Email }}"><p class="btn btn-outline-info">Send Request</p></a>
-        </article>
-    {% endfor %}
+<div class="container">
+  <h3>Results are</h3><br>
+  <div class="row">
+        {% for post in posts %}
+        <div class="col-sm col-md-6">
+            <article class="media content-section">
+              <div class="media-body">
+                <div class="article-metadata">
+                  {% if post.Verify %}
+                    <a><h4 style="color: #2b2b2bd2;">{{ post.Username }} <span class="vertify-text">vertified</h4></a>
+                  {% else %}
+                    <a><h4 style="color: #2b2b2bd2;">{{ post.Username }}</h4></a>
+                  {% endif %}
+                  <a><h4 style="color: #2b2b2bd2;">{{ post.Rating }}</h4></a><br>
+                  <a href="mailto:{{ post.Email }}"><p class="btn btn-outline-info">Send Request</p></a>
+            </article>
+          </div>
+        {% endfor %}
+  </div>
+</div>
 {% endblock content %}
