--- a/flaskFile/static/main.css
+++ b/flaskFile/static/main.css
@@ -129,10 +129,10 @@ footer {
 
 
 .vertify-text{
-  height: 10%;
-  width: 10%;
+  height: 15px;
+  width: 60px;
   text-align: center;
-  font-size: 60%;
+  font-size: 10px;
   border-radius: 30px 30px 30px 30px;
   color: #ffffff;
   background-color: #059b9b;
