Update profile almost done
Author: Siddhartha Purwar
Sate: 17-Nov-2021

Need to fix following issue:
add link for each functionality in "quick access" in account page
Make single update possible, currently it ask to update both username and email

modified:   flaskFile/forms.py
modified:   flaskFile/routes.py
modified:   flaskFile/static/profile_pics/default.jpg
modified:   flaskFile/templates/account.html

--- a/flaskFile/templates/account.html
+++ b/flaskFile/templates/account.html
@@ -2,7 +2,7 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="col-sm col-md-6">
+      <div class="col-sm col-md-auto">
         <div class="content-section">
           <div class="media">
             <img class="rounded-circle account-img" title="My Image" src="{{ imageFile }}">
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col-sm col-md">
         <div class="content-section">
-          <form method="POST" action="">
+          <form method="POST" action="" enctype="multipart/form-data">
               {{ form.hidden_tag() }}
               <fieldset class="form-group">
                   <legend class="border-bottom mb-4">Update Account</legend>
@@ -59,6 +59,15 @@
                           {{ form.email(class="form-control form-control-lg") }}
                       {% endif %}
                   </div>
+                  <div class="form-group">
+                    {{ form.picture.label }}
+                    {{ form.picture(class="form-control-file") }}
+                    {% if form.picture.errors %}
+                      {% for error in form.picture.errors %}
+                        <span class="text-danger">{{ error }}</span><br>
+                      {% endfor %}
+                    {% endif %}
+                </div>
               </fieldset>
               <div class="form-group">
                   {{ form.submit(class="btn btn-outline-info") }}
