Included error page, linked ride and user db
Inlcuded error page if something goes wrong
Linked user db and ride db

files:
    modified:   .gitignore
    modified:   flaskFile/__init__.py
    modified:   flaskFile/models.py
    modified:   flaskFile/routes.py
    modified:   flaskFile/static/main.css
    new file:   flaskFile/templates/error.html
    modified:   flaskFile/templates/result.html

--- a/flaskFile/static/main.css
+++ b/flaskFile/static/main.css
@@ -98,7 +98,14 @@ footer {
   color: #059b9b;
   font-weight: bold;
   margin-bottom: 100px;
-  margin-top: 200px;
+  margin-top: 150px;
+}
+
+.image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
 }
 
 .style-button{
