--- a/flaskFile/templates/result.html
+++ b/flaskFile/templates/result.html
@@ -4,7 +4,7 @@
   <h3>Results are</h3><br>
   <div class="row">
         {% for post in posts %}
-        <div class="col-sm col-md-6">
+        <div class="col-sm col-md-auto">
             <article class="media content-section">
               <div class="media-body">
                 <div class="article-metadata">
