Finding Ride, write Feedback and some refactoring
modified:   flaskFile/forms.py
modified:   flaskFile/models.py
modified:   flaskFile/routes.py
modified:   flaskFile/templates/account.html
new file:   flaskFile/templates/all-feedbacks.html
renamed:    flaskFile/templates/find_ride.html -> flaskFile/templates/find-ride.html
modified:   flaskFile/templates/home.html
modified:   flaskFile/templates/layout.html
new file:   flaskFile/templates/my-feedback.html
renamed:    flaskFile/templates/privacy_policy.html -> flaskFile/templates/privacy-policy.html
modified:   flaskFile/templates/result.html

--- a/flaskFile/templates/layout.html
+++ b/flaskFile/templates/layout.html
@@ -26,9 +26,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{{ url_for('find_ride') }}">Find Ride</a>
+                <a class="nav-item nav-link" href="{{ url_for('findRide') }}">Find Ride</a>
                 <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
-                <a class="nav-item nav-link" href="{{ url_for('privacy_policy') }}">Privacy policy</a>
+                <a class="nav-item nav-link" href="{{ url_for('privacyPolicy') }}">Privacy policy</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
