--- a/flaskFile/templates/account.html
+++ b/flaskFile/templates/account.html
@@ -18,7 +18,8 @@
           <p class='text-muted'>
             <ul class="list-group">
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Change Profile</li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Upcoming Ride</li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('allFeedback') }}">All Feedback</a></li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('myFeedback') }}">Your Feedback</a></li>
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Cab-Sharing Requests</li>
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Last Ride</li>
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Your Raiting</li>
