--- a/flaskFile/templates/my-feedback.html
+++ b/flaskFile/templates/my-feedback.html
@@ -7,7 +7,7 @@
                 <form method="POST" action="">
                     {{ form.hidden_tag() }}
                     <fieldset class="form-group">
-                        <legend class="border-bottom mb-4">Log In</legend>
+                        <legend class="border-bottom mb-4">Feedback</legend>
                         <div class="form-group">
                             {{ form.title.label(class="form-control-label") }}
                             {% if form.title.errors %}
