Update/delete Ride, feedback form and result page
Author: Siddhartha Purwar
Date: 21-Nov-2021

User can see and update their ride.
User can also delete the ride.
User can upadate and give his feedback.
User can view feedback by other users and his feedback also.
Result page working well.
And some refactoring in database and other files.

Note: Need work in feedback section, as user is unable to update the feedback

files:
    modified:   flaskFile/forms.py
    modified:   flaskFile/models.py
    modified:   flaskFile/routes.py
    modified:   flaskFile/templates/account.html
    modified:   flaskFile/templates/all-feedbacks.html
    modified:   flaskFile/templates/my-feedback.html
    modified:   flaskFile/templates/result.html
    new file:   flaskFile/templates/update-ride.html
    new file:   flaskFile/templates/your-rides.html

--- a/flaskFile/templates/result.html
+++ b/flaskFile/templates/result.html
@@ -3,8 +3,8 @@
 <div class="container">
   <h3>Results are</h3><br>
   <div class="row">
-        {% for ride in rides %}
-          {% if ride.destination == myride.destination and ride.source == myride.source and ride.dateOfRide == myride.dateOfRide and myride.id != ride.id %}
+        {% for ride in allRides %}
+          {% if myRide.destination == ride.destination and myRide.source == ride.source and myRide.dateOfRide == ride.dateOfRide %}
             <div class="col-sm col-md-auto">
                 <article class="media content-section">
                   <div class="media-body">
