--- a/flaskFile/templates/account.html
+++ b/flaskFile/templates/account.html
@@ -20,8 +20,7 @@
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Change Profile</li>
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('allFeedback') }}">All Feedback</a></li>
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('myFeedback') }}">Your Feedback</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Cab-Sharing Requests</li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Last Ride</li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('allRides') }}">Cab-Sharing Requests</a></li>
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Your Raiting</li>
             </ul>
           </p>
