--- a/flaskFile/templates/all-feedbacks.html
+++ b/flaskFile/templates/all-feedbacks.html
@@ -7,8 +7,12 @@
                 <article class="media content-section">
                     <div class="media-body">
                         <div class="article-metadata">
-                            <h3>{{ feedback.title }}</h3>
-                            <h5>{{ feedback.content }}</h5>
+                            <div class="col">
+                                <h3>{{ feedback.title }}</h3>
+                            </div>
+                            <div class="col">
+                                <h5>{{ feedback.content }}</h5>
+                            </div>
                         </div>
                 </article>
             </div>
