--- a/flaskFile/templates/account.html
+++ b/flaskFile/templates/account.html
@@ -17,11 +17,11 @@
         <div class="content-section">
           <p class='text-muted'>
             <ul class="list-group">
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Change Profile</li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Update Account</li>
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('allFeedback') }}">All Feedback</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('myFeedback') }}">Your Feedback</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('allRides') }}">Cab-Sharing Requests</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Your Raiting</li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('myFeedback') }}">My Feedback</a></li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('allRides') }}">All Requests</a></li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">My Raiting</li>
             </ul>
           </p>
         </div>
