Added Forget password functionality
Not working

Author: Siddhartha Purwar
Date: 27-Nov-2021
files:
    modified:   flaskFile/__init__.py
    modified:   flaskFile/forms.py
    modified:   flaskFile/models.py
    modified:   flaskFile/routes.py
    modified:   flaskFile/templates/layout.html
    modified:   flaskFile/templates/login.html
    new file:   flaskFile/templates/reset-password-request.html
    new file:   flaskFile/templates/reset-password.html

--- a/flaskFile/templates/layout.html
+++ b/flaskFile/templates/layout.html
@@ -13,7 +13,7 @@
       {% if title %}
           <title>Co-Ride- {{ title }}</title>
       {% else %}
-          <title>Flask Blog</title>
+          <title>Co-Ride</title>
       {% endif %}
   </head>
   <body>
