--- a/flaskFile/templates/login.html
+++ b/flaskFile/templates/login.html
@@ -41,10 +41,10 @@
                     </fieldset>
                     <div class="form-group">
                         {{ form.submit(class="btn btn-outline-info") }}
+                        <small class="text-muted ml-2">
+                            <a href="">Forgot Password?</a>
+                        </small>
                     </div>
-                    <small class="text-muted ml-2">
-                        <a href="#">Forgot Password?</a>
-                    </small>
                 </form>
             </div>
             <div class="border-top pt-3">
