Make blueprint user, feedback, ride and main
Author: Siddhartha Purwar
Date: 28-Nov-2021

files:
    modified:   flaskFile/__init__.py
    new file:   flaskFile/config.py
    new file:   flaskFile/feedback/__init__.py
    new file:   flaskFile/feedback/forms.py
    new file:   flaskFile/feedback/routes.py
    modified:   flaskFile/forms.py
    new file:   flaskFile/main/__init__.py
    new file:   flaskFile/main/routes.py
    modified:   flaskFile/models.py
    new file:   flaskFile/ride/__init__.py
    new file:   flaskFile/ride/forms.py
    new file:   flaskFile/ride/routes.py
    modified:   flaskFile/routes.py
    modified:   flaskFile/templates/account.html
    modified:   flaskFile/templates/home.html
    modified:   flaskFile/templates/layout.html
    modified:   flaskFile/templates/login.html
    modified:   flaskFile/templates/register.html
    modified:   flaskFile/templates/your-rides.html
    new file:   flaskFile/user/__init__.py
    new file:   flaskFile/user/forms.py
    new file:   flaskFile/user/routes.py
    new file:   flaskFile/user/utils.py
    modified:   run.py

--- a/flaskFile/templates/home.html
+++ b/flaskFile/templates/home.html
@@ -5,6 +5,6 @@
     </div>
     <br>
     <div style="text-align:center;">
-        <a href="{{ url_for('findRide') }}"><button class="style-button"><h1>Share Ride Now</h1></button></a>
+        <a href="{{ url_for('ride.findRide') }}"><button class="style-button"><h1>Share Ride Now</h1></button></a>
     </div>
 {% endblock content %}
