--- a/flaskFile/templates/account.html
+++ b/flaskFile/templates/account.html
@@ -18,9 +18,9 @@
           <p class='text-muted'>
             <ul class="list-group">
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Update Account</li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('allFeedback') }}">All Feedback</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('myFeedback') }}">My Feedback</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('allRides') }}">All Requests</a></li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('feedback.allFeedback') }}">All Feedback</a></li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('feedback.myFeedback') }}">My Feedback</a></li>
+              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('ride.allRides') }}">All Requests</a></li>
               <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">My Raiting</li>
             </ul>
           </p>
