--- a/flaskFile/templates/layout.html
+++ b/flaskFile/templates/layout.html
@@ -26,16 +26,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{{ url_for('findRide') }}">Find Ride</a>
+                <a class="nav-item nav-link" href="{{ url_for('ride.findRide') }}">Find Ride</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
-                  <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-                  <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+                  <a class="nav-item nav-link" href="{{ url_for('user.logout') }}">Logout</a>
+                  <a class="nav-item nav-link" href="{{ url_for('user.account') }}">Account</a>
                 {% else %}
-                  <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                  <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                  <a class="nav-item nav-link" href="{{ url_for('user.login') }}">Login</a>
+                  <a class="nav-item nav-link" href="{{ url_for('user.register') }}">Register</a>
                 {% endif %}
               </div>
             </div>
@@ -68,9 +68,9 @@
   <footer>
     <div class="container">
       <div class="d-flex justify-content-center">
-        <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
-        <a class="nav-item nav-link" href="{{ url_for('home') }}">Contact</a>
-        <a class="nav-item nav-link" href="{{ url_for('privacyPolicy') }}">Privacy policy</a>
+        <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
+        <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Contact</a>
+        <a class="nav-item nav-link" href="{{ url_for('main.privacyPolicy') }}">Privacy policy</a>
       </div>
       <br>
       <div class="d-flex justify-content-center">
