--- a/flaskFile/templates/login.html
+++ b/flaskFile/templates/login.html
@@ -49,7 +49,7 @@
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                    Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a><br><br><br><br>
+                    Need An Account? <a class="ml-2" href="{{ url_for('user.register') }}">Sign Up Now</a><br><br><br><br>
                 </small>
             </div>
         </div>
