--- a/flaskFile/templates/register.html
+++ b/flaskFile/templates/register.html
@@ -68,7 +68,7 @@
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                    Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a><br><br><br><br>
+                    Already Have An Account? <a class="ml-2" href="{{ url_for('user.login') }}">Sign In</a><br><br><br><br>
                 </small>
             </div>        
         </div>
