--- a/flaskFile/templates/layout.html
+++ b/flaskFile/templates/layout.html
@@ -68,9 +68,9 @@
   <footer>
     <div class="container">
       <div class="d-flex justify-content-center">
-        <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
-        <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Contact</a>
-        <a class="nav-item nav-link" href="{{ url_for('main.privacyPolicy') }}">Privacy policy</a>
+        <a class="nav-item nav-link" href="{{ url_for('general.about') }}">About</a>
+        <a class="nav-item nav-link" href="{{ url_for('general.home') }}">Contact</a>
+        <a class="nav-item nav-link" href="{{ url_for('general.privacyPolicy') }}">Privacy policy</a>
       </div>
       <br>
       <div class="d-flex justify-content-center">
