--- a/flaskFile/templates/user/account.html
+++ b/flaskFile/templates/user/account.html
@@ -2,7 +2,7 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="col-sm col-md-auto">
+      <div class="col-sm col-md-8">
         <div class="content-section">
           <div class="media">
             <img class="rounded-circle account-img" title="My Image" src="{{ imageFile }}">
@@ -13,67 +13,20 @@
         </div>
       </div>
     </div>
-      <div class="col-sm col-md-4">
-        <div class="content-section">
-          <p class='text-muted'>
-            <ul class="list-group">
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">Update Account</li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('feedback.allFeedback') }}">All Feedback</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('feedback.myFeedback') }}">My Feedback</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('ride.allRides') }}">All Requests</a></li>
-              <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">My Raiting</li>
-            </ul>
-          </p>
-        </div>
-      </div>
-    <div class="row">
-      <div class="col-sm col-md">
-        <div class="content-section">
-          <form method="POST" action="" enctype="multipart/form-data">
-              {{ form.hidden_tag() }}
-              <fieldset class="form-group">
-                  <legend class="border-bottom mb-4">Update Account</legend>
-                  <div class="form-group">
-                      {{ form.username.label(class="form-control-label") }}
-                      {% if form.username.errors %}
-                          {{ form.username(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.username.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.username(class="form-control form-control-lg") }}
-                      {% endif %}
-                  </div>
-                  <div class="form-group">
-                      {{ form.email.label(class="form-control-label") }}
-                      {% if form.email.errors %}
-                          {{ form.email(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.email.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.email(class="form-control form-control-lg") }}
-                      {% endif %}
-                  </div>
-                  <div class="form-group">
-                    {{ form.picture.label }}
-                    {{ form.picture(class="form-control-file") }}
-                    {% if form.picture.errors %}
-                      {% for error in form.picture.errors %}
-                        <span class="text-danger">{{ error }}</span><br>
-                      {% endfor %}
-                    {% endif %}
-                </div>
-              </fieldset>
-              <div class="form-group">
-                  {{ form.submit(class="btn btn-outline-info") }}
-              </div>
-            </form>
-          </div>       
+    <div class="container">
+      <div class="row">
+        <div class="col-sm col-md-8">
+          <div class="content-section">
+            <p class='text-muted'>
+              <ul class="list-group">
+                <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('user.updateAccount') }}">Update Account</a></li>
+                <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('feedback.allFeedback') }}">All Feedback</a></li>
+                <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('feedback.myFeedback') }}">My Feedback</a></li>
+                <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view"><a href="{{ url_for('ride.allRides') }}">All Requests</a></li>
+                <li style="color: #2b2b2bd2; font-size: 20px;" class="list-group-item list-group-item-light side-view">My Raiting</li>
+              </ul>
+            </p>
+          </div>
         </div>
       </div>
     </div>
