--- a/flaskFile/templates/user/login.html
+++ b/flaskFile/templates/user/login.html
@@ -42,7 +42,7 @@
                     <div class="form-group">
                         {{ form.submit(class="btn btn-outline-info") }}
                         <small class="text-muted ml-2">
-                            <a href="">Forgot Password?</a>
+                            <a href="{{ url_for('user.resetPasswordRequest') }}">Forgot Password?</a>
                         </small>
                     </div>
                 </form>
